--- a/pom.xml
+++ b/pom.xml
@@ -6,19 +6,20 @@
 
     <groupId>me.ajmfactsheets</groupId>
     <artifactId>slipgate</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.3.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Slipgate</name>
 
-    <description>Adds a fast travel dimension called "the slip" which is accessable through portals known as
+    <description>Adds a fast travel dimension called "the slip" which is accessible through portals known as
         "slipgates". Using the slip allows you to travel 8x faster than using the nether and thus 64x faster than using
         the overworld.
     </description>
     <properties>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>1.7.22</kotlin.version>
+        <kotlin.version>1.8.0</kotlin.version>
+        <paper.version>1.19.3-R0.1-SNAPSHOT</paper.version>
     </properties>
     <url>https://www.github.com/AJMFactsheets</url>
 
@@ -114,7 +115,7 @@
         <dependency>
             <groupId>io.papermc.paper</groupId>
             <artifactId>paper-api</artifactId>
-            <version>1.19.3-R0.1-SNAPSHOT</version>
+            <version>${paper.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
